Trevius: Added an extra hacker check for clicking a must equip effect without having it equipped.
Trevius: SoD - Removed the opcodes for the Pet Buff Window until the structure is updated.  Prevents pet classes from crashing when pets are buffed.
Derision: SoD - Pet Buff Window now works.

==04/01/2010==
Derision: SoD - Tracking
Derision: SoD - Fixed price bug when buying from merchants.
Trevius: SoD - Spell books now display all scribed spells (was previously hiding the first 9 slots).
Trevius: SoD - Stopped the Barter error that was reporting when logging in due to an incorrect opcode.

==03/31/2010==
Derision: SoD - Groups should be as functional as previous clients, except Group Leadership AA doesn't work.
Derision: SoD - Fixed items being incorrectly flagged as No Trade/Copied

==03/30/2010==
Trevius: SoD - Corrected the opcode for Mob Health Updates so they update properly.
Trevius: SoD - Added a few new Opcodes and Structures for SoD packets that aren't used yet.

==03/28/2010==
Derision: SoD - Fixed client animation/runspeed glitch.
Derision: All Clients - Player position updates to other players should be more accurate.
Trevius: Updated #race and #fixmob commands to allow up to race 626 which is the total for the SoD client.
Derision: SoD - Very preliminary work on groups. You can form a group, but nothing else.

==03/27/2010==
Trevius: SoD - A couple more Opcode updates.
Trevius: SoD - Some group structures work, but grouping is still not functional.
Derision: SoD - Fixed random client crashes due to spawn packets and invisible mobs should now be invisible.
Derision: SoD - Did a basic Encode on OP_WhoAllResponse. Still needs work for various flags (LD/Trader/Buyer) etc.

==03/26/2010==
Trevius: SoD - Finished updated Opcodes and they should now be caught up with what we have in SoF.
Trevius: SoD - Updated Item Struct and now 1 inventory item can load correctly.
Trevius: SoD - Updated Position Update packet structures.