@@ -1311,6 +1311,21 @@ ENCODE(OP_ManaChange) {
 	FINISH_ENCODE();
 }
 
+ENCODE(OP_OnLevelMessage)
+{
+	ENCODE_LENGTH_EXACT(OnLevelMessage_Struct);
+	SETUP_DIRECT_ENCODE(OnLevelMessage_Struct, structs::OnLevelMessage_Struct);
+	memcpy(eq->Title, emu->Title, sizeof(eq->Title));
+	memcpy(eq->Text, emu->Text, sizeof(eq->Text));
+	OUT(Buttons);
+	OUT(Duration);
+	OUT(PopupID);
+	// These two field names are used if Buttons == 1. We should add an interface to them via Perl.
+	sprintf(eq->ButtonName0, "Yes");
+	sprintf(eq->ButtonName1, "No");
+	FINISH_ENCODE();
+}
+
 ENCODE(OP_Illusion) {
 	ENCODE_LENGTH_EXACT(Illusion_Struct);
 	SETUP_DIRECT_ENCODE(Illusion_Struct, structs::Illusion_Struct);
