@@ -59,6 +59,7 @@ E(OP_WhoAllResponse)
 E(OP_Track)
 E(OP_ShopPlayerBuy)
 E(OP_PetBuffWindow)
+E(OP_OnLevelMessage)
 
 //list of packets we need to decode on the way in:
 D(OP_SetServerFilter)
