@@ -1815,6 +1815,20 @@ struct GMLastName_Struct {
 					    // 0x01, 0x00 = Update the clients
 };
 
+struct OnLevelMessage_Struct {
+/*0000*/	char    Title[128];
+/*0128*/	char    Text[4096];
+/*4224*/	char	ButtonName0[25];	// If Buttons = 1, these two are the text for the left and right buttons respectively
+/*4249*/	char	ButtonName1[25];
+/*4274*/	uint8	Buttons;
+/*4275*/	uint8	Unknown4275;	// Something to do with audio controls
+/*4276*/	uint32  Duration;
+/*4280*/	uint32  PopupID;	// If none zero, a response packet with 00 00 00 00 <PopupID> is returned on clicking the left button
+/*4284*/	uint32  NegativeID;	// If none zero, a response packet with 01 00 00 00 <NegativeID> is returned on clicking the right button
+/*4288*/	uint32  Unknown4288;
+/*4292*/
+};
+
 //Combat Abilities
 struct CombatAbility_Struct {
 	int32 m_target;		//the ID of the target mob
